Fix: OPEX-286 Resize grid item stays visible

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -357,6 +357,9 @@ body, html {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   border: none !important;
   border-radius: 3px;
+  &.resizing {
+    z-index: 100;
+  }
   .cr-grid-item__body {
     background: var(--base-bright);
     border-radius: 3px;
